Add empty lines

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
      }
    </script>
   </div>
+  <span> Hello</span>
   <div id="procese-div">
     <h2 id="procese-title" <h2>Procese</h2>
     <p id="pgftwo" <p>Procesele din compania noastra</p>
